# slack-event-subscriber-proto

./: .tool-versions  README.md
.github/workflows/: haskell.yml  terraform.yml
lambda/: Makefile  hie.yaml  lambda.cabal
lambda/app/: Main.hs
lambda/docker/cabal-on-al2/: Dockerfile
lambda/src/Bot/AWS/: S3.hs  SecretsManager.hs
lambda/src/Bot/Handler/: EventSubscriber.hs
lambda/src/Bot/Slack/: Auth.hs  Event.hs  Types.hs
lambda/src/Bot/Slack/API/Conversations/: Replies.hs
terraform/: api.tf  iam.tf  lambda.tf  provider.tf  secrets_manager.tf
