cabal-version:      2.4
name:               lambda
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kurubushi
maintainer:         krbshi@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Bot.AWS.SecretsManager
    Bot.Handler.EventSubscriber
    Bot.Slack.Auth
    Bot.Slack.Event
    Bot.Slack.Types

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson                    >=1.5   && <2
    , aeson-casing             ^>=0.2
    , amazonka                 >=1.6   && <2
    , amazonka-secretsmanager  >=1.6   && <2
    , base                     >=4.14  && <5
    , base16-bytestring        >=1.0   && <2
    , bytestring               ^>=0.10
    , containers               ^>=0.6
    , cryptohash-sha256        ^>=0.11
    , lens                     >=5.0   && <6
    , safe-exceptions          ^>=0.1.7
    , serverless-haskell       ^>=0.12
    , text                     >=1.2   && <2

  hs-source-dirs:   src
  default-language: Haskell2010

executable bootstrap
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base    >=4.14 && <5
    , lambda

  hs-source-dirs:   app
  default-language: Haskell2010

-- executable hoge-bot
--   main-is:          HogeBot/Main.hs
--   other-modules:
--     HogeBot.Types
--     HogeBot.Utils
-- 
--   build-depends:
--     , base    >=4.14 && <5
--     , lambda
-- 
--   hs-source-dirs:   app
--   default-language: Haskell2010
